AUTOMAKE_OPTIONS = subdir-objects
ACLOCAL_AMFLAGS = $(ACLOCAL_FLAGS)

bin_PROGRAMS = doomsdayTetris

doomsdayTetris_SOURCES = main.cpp\
						Log.h\
						Block.h Block.cpp\
						BoxTexture.h BoxTexture.cpp\
						Conf.h Conf.cpp\
						Events.h Events.cpp\
						Grid.h Grid.cpp\
						Highscorer.h Highscorer.cpp\
						Screen.h Screen.cpp\
						SqlConn.h SqlConn.cpp\
						StaticBlock.h StaticBlock.cpp\
						UberBlockifier.h UberBlockifier.cpp\
						UniqueIdentifier.h UniqueIdentifier.cpp\
						WebConf.h WebConf.cpp\
						GlobalHighscore.h GlobalHighscore.cpp
